--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="example-app-name">Aprendizados 2.0</h1>
+    <span class="example-app-name">Aprendizados 2.0</span>
   </mat-toolbar>
 
   <mat-drawer-container class="example-sidenav-container">
@@ -24,6 +24,7 @@
         </li>
         <div class="content">
           <a routerLink="/javascript" class="snav-item">Javascript</a>
+          <a routerLink="/react" class="snav-item">React</a>
         </div>
       </ul>
 
@@ -39,7 +40,7 @@
         </li>
         <div class="content">
           <a routerLink="/php" class="snav-item">PHP</a>
-          <a routerLink="/node" class="snav-item">Node</a>
+          <!-- <a routerLink="/node" class="snav-item">Node</a> -->
         </div>
       </ul>
 
@@ -54,7 +55,7 @@
           </button>
         </li>
         <div class="content">
-          <a routerLink="/wordpress" class="snav-item">Wordpress</a>
+          <!-- <a routerLink="/wordpress" class="snav-item">Wordpress</a> -->
           <a routerLink="/ciencia-de-dados" class="snav-item">Dados</a>
         </div>
       </ul>
