--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -20,8 +20,9 @@
   z-index: 2;
 }
 
-h1.example-app-name {
-  margin-left: 8px;
+.example-app-name {
+  font-size: 1.2rem;
+  padding-left: 10px;
 }
 
 .example-sidenav-container {
