--- a/src/app/javascript/javascript.component.html
+++ b/src/app/javascript/javascript.component.html
@@ -16,22 +16,17 @@
       <div class="card-header">Conceitos Básicos</div>
       <div class="card-body">
         <p class="card-text">
-          O conceito dos tipos primitivos, métodos como
-          <b>Map, Filter e Reduce</b>, o uso do
-          <b>This com Call, Apply e Bind</b>, o que é <b>Callback</b> estão nos
-          meus aprendizados anteriores (em 2020).
-        </p>
-        <a href="#" class="btn btn-primary">Acessar</a>
+          Comecei com o módulo básicão do curso em video. Depois fiz um curso, ainda básico, na Alura. E pesquisei bastante material. Eu tinha feito diversas anotações, que fiz a besteira de não colocar no git e meu antigo PC acabou indo pro espaço com essas anotações.
       </div>
     </div>
   </div>
 
   <div class="col-sm-4">
     <div class="card">
-      <div class="card-header">Manipulando o DOM</div>
+      <div class="card-header">Arrays e Objetos</div>
       <div class="card-body">
-        <p class="card-text">Utilizando parentNode, childNode e outros.</p>
-        <a href="#" class="btn btn-primary">Acessar</a>
+        <p class="card-text">Anotação de Pontos e Colchetes..</p>
+        <a routerLink='/javascript/array-objeto' class="btn btn-primary">Acessar</a>
       </div>
     </div>
   </div>
@@ -40,7 +35,7 @@
     <div class="card">
       <div class="card-header">Orientação à Objetos</div>
       <div class="card-body">
-        <p class="card-text">Trabalhando com objetos no Javascript.</p>
+        <p class="card-text">Trabalhando Orientado a Objetos no Javascript.</p>
         <a routerLink='/javascript/oo' class="btn btn-primary">Acessar</a>
       </div>
     </div>
