--- a/src/app/javascript/crud/crud.component.html
+++ b/src/app/javascript/crud/crud.component.html
@@ -15,7 +15,7 @@
 
 <p>É uma API do javascript. É mais atual e mais poderosa que a antiga XMLHttpRequest. Essa função que passamos no JS lida com requisições e respotas do servidor!</p>
 
-<p>Fetch retorna uma Promisse. A Promisse, com o nome diz, é apenas uma promessa que algo será enviado.</p>
+<p>Fetch retorna uma Promisse. A Promisse, como o nome diz, é uma promessa que algo será enviado</p>
 
 <p>Vamos ver um exemplo de como utilizar o fetch. Ele precisa de um parâmetro que é a URL</p>
 <pre><code [highlight]='codeCrud1'></code></pre>
