--- a/src/app/javascript/javascript.component.html
+++ b/src/app/javascript/javascript.component.html
@@ -40,4 +40,25 @@
       </div>
     </div>
   </div>
+
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-header">Crud</div>
+      <div class="card-body">
+        <p class="card-text">Utilizando fetch / fazendo requisições</p>
+        <a routerLink='/javascript/crud' class="btn btn-primary">Acessar</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-header">Crud</div>
+      <div class="card-body">
+        <p class="card-text">Entrando no detalhe do Reduce, um loop que utilizamos para transformar arrays em outras coisas</p>
+        <a routerLink='/javascript/reduce' class="btn btn-primary">Acessar</a>
+      </div>
+    </div>
+  </div>
+
 </div>
