feat: add rest and crud

--- a/src/app/javascript/crud/crud.component.html
+++ b/src/app/javascript/crud/crud.component.html
@@ -24,7 +24,7 @@
 
 <pre><code [highlight]='codeCrud2'></code></pre>
 
-<p>Agora, com os dois then - e podemos colocar mais then se quisermos - temos nossa resposta em formato json para pegar o dado que quisermos.</p>
+<p>Agora, com os dois then - e podemos colocar mais then se quisermos - temos nosso objeto para trabalharmos em cima dele.</p>
 
 <p>Só um detalhe que vale dizer. E se digitarmos errado: </p>
 
