--- a/src/app/javascript/javascript.component.html
+++ b/src/app/javascript/javascript.component.html
@@ -53,7 +53,7 @@
 
   <div class="col-sm-4">
     <div class="card">
-      <div class="card-header">Crud</div>
+      <div class="card-header">Reduce</div>
       <div class="card-body">
         <p class="card-text">Entrando no detalhe do Reduce, um loop que utilizamos para transformar arrays em outras coisas</p>
         <a routerLink='/javascript/reduce' class="btn btn-primary">Acessar</a>
